--- a/index.html
+++ b/index.html
@@ -3366,8 +3366,7 @@ function showSlides(n) {
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>Health Care Is A
-                                Common Human Right Worldwide. But In Some Regions (Countries) Lacking Socialized
-                                Medecine, People Simply Die Of Malaria.</b> </p>
+                                Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>Health Care</b> as a right for
                             everyone is not the reality everywhere. Especially in some African countries people suffer
                             and die of simple diseases that can be avoided.</p>
@@ -3425,8 +3424,7 @@ function showSlides(n) {
                     <div class="k-imagek5">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b>Climate Change Is a
-                                Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
+                            <b>Climate Change Is a Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
                                 Around The World. There Is
                                 No Doubt That Climate Change Has More Endangered Earth Than Never Before. But
                                 Human-Being Has Provoked That
