--- a/index.html
+++ b/index.html
@@ -3363,10 +3363,8 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
-                        <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b>Health Care Is A
-                                Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            <b>Health Care Is A Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>Health Care</b> as a right for
                             everyone is not the reality everywhere. Especially in some African countries people suffer
                             and die of simple diseases that can be avoided.</p>
@@ -3393,14 +3391,11 @@ function showSlides(n) {
                     <div class="k-imagek4">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b>What Means Food
-                                Security To You ? How Can We Do To Challenge It Worldwide?</b> </p>
+                            <b>What Means Food Security According To You ? What be Done To Challenge It Worldwide?</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
-                            unfortunately not the
-                            same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
-                            hard to get
-                            needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
+                            unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
+                            hard to get needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
                         </p>
                     </div>
                 </a>
@@ -3425,12 +3420,10 @@ function showSlides(n) {
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b>Climate Change Is a Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
-                                Around The World. There Is
-                                No Doubt That Climate Change Has More Endangered Earth Than Never Before. But
-                                Human-Being Has Provoked That
-                                Change Through His Continuing Agression. Now He Has to Figure It Out And Mitigate The Danger.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>Climate Change</b> has neither
-                            been a story nor a comedy. It's a mad reality.
+                                Around The World. There Is No Doubt That Climate Change Has More Endangered Earth Than Never Before. But
+                                Human-Being Has Provoked That Change Through His Continuing Agression. Now He Has to Figure It Out And Mitigate The Danger.</b> </p>
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">
+                            <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
                         </p>
                     </div>
                 </a>
@@ -3441,8 +3434,7 @@ function showSlides(n) {
                             <img src="https://www.zupimages.net/up/22/30/01at.jpg" alt="" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
-                                Global Warming
-                                is seriously a global threat</figcation>
+                                Global Warming is seriously a global threat</figcation>
                         </figure>
                     </div>
                 </a>
@@ -3456,8 +3448,7 @@ function showSlides(n) {
                     <div class="k-imagek6">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b>Disability Is Not
-                                Destiny. But For Disabled People Living In Exclusive Areas, They
+                            <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
                                 Have To Struggle Two Times Harder At Least Than Any Else To Get Their Needs Or Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">As a disabled person, I experienced
@@ -3486,8 +3477,7 @@ function showSlides(n) {
                     <div class="k-imagek7">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b>Culture Is Like A
-                                Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
+                            <b>Culture Is Like A Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
                                 Promote And Preserve Identity From Elders To Kids,
                                 From Grand-Parents To Grand-Sons. Everybody Plays A Key Role Of A Transmission In Order To
                                 Preserve It</b> </p>
@@ -3553,7 +3543,7 @@ function showSlides(n) {
                     </div>
                 </div>
                 <div class="TITLE">
-                    Temporary photos to be replaced by photos of Burkina Faso before the publication
+                    Temporary photos of Montreal to be replaced soon
                 </div>
 
             </div>
@@ -3561,7 +3551,7 @@ function showSlides(n) {
             <div class="contentx">
                 <div class="contentx0">
                 <div class="contentx1">
-                    <b>What You're Doing Will Stand As Results of What You've Done</b>
+                    <b>What You are Doing Will Stand As experiences of What You've Done</b>
                 </div>
                 <div class="contentx2">
                     <b>The Way Of Your Success Or Failure Is Mostly Framed By Yourself</b>
@@ -3578,7 +3568,7 @@ function showSlides(n) {
                                 <figure>
                                     <figcation
                                         style="font-family: arial; color: rgba(145, 145, 145, 0.961); font-size: 12px; text-align: left; margin-top: -5px;">
-                                       Av. d'Oubritenga in Ouagadougou/Burkina Faso</figcation>
+                                       Avenue d'Oubritenga in Ouagadougou-Burkina Faso</figcation>
                                     <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="A scene in Ouagadougou">
                                 </figure>
                             </div>
@@ -3593,12 +3583,12 @@ function showSlides(n) {
                             </div>
                             <div class="content2y2">
                                 <p style="font-family: 'georgia'; line-height: 15px; font-size: 12px; text-align: justify; color: rgba(48, 48, 48, 0.961);">
-                                    Burkina
-                                    Faso is a landlocked country nested in the heart of West Africa. Its capital and
-                                    main city is Ouagadougou. The population of Burkina Faso is largely composed by young people and is about 20.9
+                                    Burkina Faso is a landlocked country nested in the heart of West Africa. Its capital and
+                                    main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants and is mainly composed of young people and is about 20.9
                                     millions people according to the World Bank recent stats. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
-                                    sector is believed to create many jobs for people. Citizens are called Burkinabè.</p>
+                                    sector is believed to create many jobs for people. Citizens are called Burkinabè.
+                                </p>
 
                             </div>
 
