--- a/index.html
+++ b/index.html
@@ -3223,7 +3223,7 @@ function showSlides(n) {
 
         <div class="s-wrapper">
             <div class="reader">
-                <b>Welcome ! This Website Is In Project ! Some Of The Pics And Links Are Temporarily Set. Thank You For Your Visit !</b>
+                <b>Welcome ! This Website Is In Project. Some Of The Pics And Links Are Temporarily Set. Thank You For Your Visit !</b>
             </div>
 
             
@@ -3262,8 +3262,7 @@ function showSlides(n) {
                                 <img src="https://zupimages.net/up/22/32/mfk2.jpg" alt="Red Flower">
                                 <figcaption
                                     style="font-family: 'arial'; font-size: 11.45px; text-align: left; color: rgba(88, 88, 88, 0.984);">
-                                    Can You Name
-                                    This Flower ?</figcaption>
+                                    Can You Name This Flower ?</figcaption>
                             </figure>
                         </div>
 
