--- a/index.html
+++ b/index.html
@@ -3550,7 +3550,7 @@ function showSlides(n) {
             <div class="contentx">
                 <div class="contentx0">
                 <div class="contentx1">
-                    <b>What You are Doing Will Stand As experiences of What You've Done</b>
+                    <b>What You're Doing Will Stand As Your Own Experiences</b>
                 </div>
                 <div class="contentx2">
                     <b>The Way Of Your Success Or Failure Is Mostly Framed By Yourself</b>
