--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <meta property="og:image:type" content="image jpeg">
     <meta property="og:image:width" content="195px">
     <meta property="og:image:height" content="160px">
-    <meta property="og:description"
-        content="#">
+    <meta property="og:description" content="#">
     <meta property="og:determiner" content="auto">
     <meta property="og:image:secure_url" content="#">
     <meta property="og:locale" content="EN_CA">
@@ -60,7 +59,6 @@
             font-family: 'Barlow Condensed', sans-serif;
         }
         
-
         .navbar {
             background: #000;
             height: 57px;
@@ -124,7 +122,7 @@
             cursor: pointer;
         }
 
-        .Photography-content {
+ .Photography-content {
   display: none;
   position: absolute;
   background: #fff!important;
@@ -1799,8 +1797,6 @@
             height: 230px;
         }
 
-
-
         .contentx {
             display: grid;
             grid-template-rows: 1fr 1fr;
@@ -2066,7 +2062,6 @@
             color: #000;
             text-align: left;
             line-height: 18px;
-
         }
 
         .contentte img {
@@ -2276,7 +2271,6 @@
             font-size: 11px;
             line-height: 13.4px;
             background-color: transparent;
-
         }
 
         .contenty3 {
@@ -2334,8 +2328,6 @@
             height: 325px;
             animation: autoo 12s infinite ease-in;
             animation-delay: 4s;
-
-
         }
 
         @keyframes autoo {
@@ -2522,7 +2514,6 @@
             cursor: pointer;
             box-shadow: 0px 0px 10px 2px rgba(184, 184, 184, 0.765);
             letter-spacing: 0.2px;
-
         }
 
         .ct0:hover {
@@ -2591,7 +2582,6 @@
             transition: 0.35s ease-in;
         }
 
-
         .ct2 {
             display: flex;
             position: relative;
@@ -2617,7 +2607,6 @@
             color: rgb(160, 160, 160);
             transition: 0.35s ease-in;
         }
-
 
         .ct3:hover {
             background: rgb(1, 1, 196);
@@ -2696,7 +2685,6 @@
             transition: 0.2s ease-in-out;
             color: rgb(255, 14, 14);
             font-family: 'arial';
-
         }
 
         .in-sidebar a:active {
@@ -2730,7 +2718,6 @@
             color: rgba(39, 39, 39, 0.729);
             padding: 2px;
             border-bottom: 0.5px solid rgba(142, 142, 142, 0.335);
-
         }
 
         .explanation2 {
@@ -3317,8 +3304,7 @@ function showSlides(n) {
                             <img src="https://zupimages.net/up/22/20/8ul2.jpg" alt="Sunset in Burkina Faso" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
-                                Sunset In The
-                                Village Of Nagreongo [Burkina Faso]</figcation>
+                                Sunset In The Village Of Nagreongo [Burkina Faso]</figcation>
                         </figure>
                     </div>
                 </a>
@@ -3331,8 +3317,7 @@ function showSlides(n) {
                     <div class="k-image2">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b> "Inclusiveness"
-                                May Be Ordinary Or New To You. But Inclusiveness As Word Never Been
+                            <b> "Inclusiveness" May Be Ordinary Or New To You. But Inclusiveness As Word Never Been
                                 Strange To The Dictionary.
                                 That Means Words Have Been With Us Since The Creation. It Belongs To Human-Beings To Put Them
                                 Into Life By Practices. That's Why Inclusive
@@ -3566,7 +3551,7 @@ function showSlides(n) {
                             <div class="content3y">
                                 <figure>
                                     <figcation
-                                        style="font-family: arial; color: rgba(145, 145, 145, 0.961); font-size: 12px; text-align: left; margin-top: -5px;">
+                                        style="font-family: arial; color: rgba(145, 145, 145, 0.961); font-size: 11px; text-align: left; margin-top: -5px;">
                                        Avenue d'Oubritenga in Ouagadougou-Burkina Faso</figcation>
                                     <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="A scene in Ouagadougou">
                                 </figure>
@@ -3581,10 +3566,9 @@ function showSlides(n) {
                                 <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'georgia'; line-height: 15px; font-size: 12px; text-align: justify; color: rgba(48, 48, 48, 0.961);">
-                                    Burkina Faso is a landlocked country nested in the heart of West Africa. Its capital and
-                                    main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants and is mainly composed of young people and is about 20.9
-                                    millions people according to the World Bank recent stats. Geography influences Economy. The economy of Burkina Faso is mostly based on the
+                                <p style="font-family: 'georgia'; line-height: 16px; font-size: 12.5px; text-align: justify; color: rgba(70, 70, 70, 0.888);">
+                                    Burkina Faso is a landlocked country located in the heart of West Africa. Its capital and
+                                    main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
                                     sector is believed to create many jobs for people. Citizens are called Burkinabè.
                                 </p>
