--- a/index.html
+++ b/index.html
@@ -1180,15 +1180,14 @@
             flex-direction: row;
             width: 985px;
             height:35px ;
-            padding: 5px;
-            justify-content: center;
+            justify-content: left;
             align-items: center;
             background: transparent;
-            font-family: 'georgia';
-            font-size: 12px;
-            color: rgba(126, 125, 125, 0.986);
+            font-family: 'Barlow Condensed', sans-serif;
+            font-size: 15px;
+            color: rgba(125, 125, 125, 0.925);
             margin-top: 4px;
-            text-align: center;
+            text-align: left;
         
         }
 
@@ -3205,7 +3204,7 @@ function showSlides(n) {
 
         <div class="s-wrapper">
             <div class="reader">
-                <b>Welcome ! This Website Is In Project. Some Of The Pics And Links Are Temporarily Set. Thank You For Your Visit !</b>
+                <b>Welcome ! This Website Is In Project. Some Of The Pics And Links Are Temporarily Set. Thank You For Understanding !</b>
             </div>
 
             
@@ -3244,7 +3243,7 @@ function showSlides(n) {
                                 <img src="https://zupimages.net/up/22/32/mfk2.jpg" alt="Red Flower">
                                 <figcaption
                                     style="font-family: 'arial'; font-size: 11.45px; text-align: left; color: rgba(88, 88, 88, 0.984);">
-                                    Can You Name This Flower ?</figcaption>
+                                    What is the name of this flower ?</figcaption>
                             </figure>
                         </div>
 
@@ -3264,7 +3263,7 @@ function showSlides(n) {
                 <div class="myTITLE">
                     <figure>
                 <figcaption>
-                    <b>Children are like flowers. They need to take care of them. Teaching them has always been funny for me in terms of how much I learn back from them. [Gaby]</b>
+                    <b>Children are like flowers. They need us to take care of them. Teaching them has always been funny for me because I learned much back. [Gaby]</b>
                 </figcaption>
                 </figure>
                 </div>
