--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
         .Photography .dropbtn {
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 22px;
-            color: #fff;
             background: inherit;
             padding: 15.6px 8px;
             color: #fff;
@@ -116,25 +115,23 @@
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            background: red;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
  .Photography-content {
   display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
-  
         }
 
         .Photography-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -142,8 +139,8 @@
         }
 
         .Photography-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -171,24 +168,23 @@
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            background: red;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .Sport-content {
             display: none;
   position: absolute;
-  background: #fff;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 219px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
         }
 
         .Sport-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -196,8 +192,8 @@
         }
 
         .Sport-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -224,24 +220,23 @@
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            background: red!important;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .Education-content {
             display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
         }
 
         .Education-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -249,8 +244,8 @@
         }
 
         .Education-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -277,16 +272,16 @@
         }
 
         .navbar:hover .Daily:hover .dropbtn {
-            background: red!important;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .Daily-content {
             display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -294,7 +289,7 @@
 
         .Daily-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -302,8 +297,8 @@
         }
 
         .Daily-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -330,16 +325,16 @@
         }
 
         .navbar:hover .Photos:hover .dropbtn {
-            background: red!important;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .Photos-content {
             display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -347,7 +342,7 @@
 
         .Photos-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -355,8 +350,8 @@
         }
 
         .Photos-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -383,16 +378,16 @@
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            background: red!important;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .Community-content {
-            display: none;
+  display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -400,7 +395,7 @@
 
         .Community-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -408,8 +403,8 @@
         }
 
         .Community-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -436,25 +431,24 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            background: red!important;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .TikiYiki-content {
-            display: none;
+  display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
   margin-left: 45px;
         }
 
         .TikiYiki-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -462,11 +456,11 @@
         }
 
         .TikiYiki-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 20px;
+            font-size: 19px;
             line-height: 35px;
         }
 
@@ -490,24 +484,23 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            background: red!important;
-            color: #fff;
-            transition: 0.11s linear;
+            background: #fff!important;
+            color: #000;
+            transition: 0.15s linear;
             cursor: pointer;
         }
 
         .Disability-content {
             display: none;
   position: absolute;
-  background: #fff!important;
+  background: rgba(255, 138, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
         }
 
         .Disability-content a {
             float: none;
-            color: #000;
+            color: darkblue;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -515,8 +508,8 @@
         }
 
         .Disability-content a:hover {
-            background: blue;
-            color: yellow;
+            background: rgba(255, 199, 96, 0.948);
+            color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
