--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         }
 
         .Photography-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -192,7 +192,7 @@
         }
 
         .Sport-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -244,7 +244,7 @@
         }
 
         .Education-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -297,7 +297,7 @@
         }
 
         .Daily-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -350,7 +350,7 @@
         }
 
         .Photos-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -403,7 +403,7 @@
         }
 
         .Community-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -440,7 +440,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgb(255, 136, 45)!important;
   width: 260px;
   z-index: 1;
   margin-left: 45px;
@@ -456,11 +456,11 @@
         }
 
         .TikiYiki-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 19px;
+            font-size: 20px;
             line-height: 35px;
         }
 
@@ -493,7 +493,7 @@
         .Disability-content {
             display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgb(255, 136, 45)!important;
   width: 260px;
   z-index: 1;
         }
@@ -508,12 +508,12 @@
         }
 
         .Disability-content a:hover {
-            background: rgba(255, 199, 96, 0.948);
+            background: rgba(255, 184, 77, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34.5px;
+            line-height: 35px;
         }
 
         .Disability:hover .Disability-content {
